# sligh

./: .gitignore  Cargo.toml  LICENSE  LocalActions.thy  README  README.md  State.thy  Subprocess.thy  Todo.txt  budget2.sl  cert-spec.sl  counter.sl  deno-test.sl  dune-project  effects.sl  forward-simulation.txt  gencert  gendeno  id-gen-equivalence.txt  implementation-generation.md  install  syntax_study.txt  thoughts.txt  todo.txt
examples/apitest/: todo.txt
examples/todomvc/: model.ts  refine.ts  refinetest.sl  todomvc.sl  transform
express_server/: .gitignore  define-endpoints.ts  initTestDb.js  package.json  serve.ts  tsconfig.json
lib/: certification.ml  codegen.ml  compiler.ml  core.ml  draw.ml  draw_codegen.ml  dune  effects.ml  env.ml  environment.ml  file.ml  idk  implementation.ml  interpreter.ml  lexer.mll  model.ml  parse.ml  parse.sl  parser.conflicts  parser.mly  process.ml  test.ml  testgen.ml  typescript_syntax.ml  util.ml  witness.ml
src/: client_server.lang  derived.lang  grammar.pest  main.rs  recur-next.lang  recur-scenarios-next.sligh  recur-scenarios.lang  recur.lang  scratch.lang  small.lang  test.lang
test/: dune
translation_certification/: package-lock.json  package.json  tsconfig.json
translation_certification/test/: executions.test.ts  forward-simulation.test.ts  generated-client.ts  generated-model.ts  state-transition-properties.ts  translation.test.ts
translation_validation/: package-lock.json  package.json
web_server/: define-endpoints.js  index.js  index.ts  package-lock.json  package.json  test.db
(+3 files in other folders)
