[package]
name = "sligh"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { version = "2.1", features = ["pretty-print"] }
pest_derive = "2.1"
clap = { version = "3.0.14", features = ["derive"] }
convert_case = "0.5.0"
