(menhir
 (modules parser)
 (flags --explain))

(ocamllex lexer)

(library
 (name edsl)
 (modules compiler certification implementation effects env parse parser lexer interpreter process file codegen util core)
 (inline_tests)
 (preprocess (pps ppx_inline_test)))

(env
 (dev
  (flags (:standard -w -66))))
